# poseidon

./: .gitignore  ARCHITECTURE.md  LICENSE  PLAN.md  PROGRESS.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: CODEX-OAUTH-PLAN.md  DISTRIBUTION.md  PYPI-PUBLISHING.md
packaging/: launcher.py  poseidon.spec
poseidon/: approvals.py  cli.py  codex.py  compress.py  config.py  costs.py  mcp.py  memory.py  orchestrator.py  retrieval.py  runs.py  sandbox.py  scheduler.py  server.py  sessions.py  skills.py  store.py  versions.py
poseidon/static/: app.js  index.html  manifest.json  style.css
poseidon/tools/: __init__.py  comms.py  docs.py  files.py  shell.py  web.py
scripts/: install.ps1  install.sh
tests/: test_core.py  test_failover.py  test_retrieval_compress.py  test_sandbox.py
